# xiaomi-miloco

./: AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh_Hans.md  main.py  pyproject.toml  setup.sh  setup_mac.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: rust-agent-runtime-migration.yml
.github/workflows/: agent-runtime-ci.yml  build-agent-runtime-wheels.yml  build-docker.yml  check-code.yml
config/: server_config.yaml
docker/: .env.example  backend.Dockerfile  docker-compose-lite.yaml
docs/: environment-setup.md  environment-setup_zh-Hans.md
docs/development/: developer-setup.md  developer-setup_zh_Hans.md  rust-agent-runtime-migration.md
docs/usage/: README.md  README_zh_Hans.md
miloco_server/: __init__.py  __main__.py  main.py  pyproject.toml
miloco_server/agent/: chat_agent.py  dynamic_execute_agent.py  nlp_request_agent.py  runtime_bridge.py  runtime_contract.py  rust_runtime_adapter.py
miloco_server/config/: normal_config.py
miloco_server/controller/: chat_controller.py  model_controller.py
miloco_server/mcp/: local_mcp_servers.py  tool_contract.py  tool_executor.py
miloco_server/schema/: chat_schema.py  model_schema.py
miloco_server/service/: chat_agent_dispatcher.py  model_service.py  trigger_rule_dynamic_executor.py  trigger_rule_runner.py  trigger_rule_service.py
miot_kit/miot/: mcp.py
native/miloco-agent-runtime/: Cargo.toml  README.md  pyproject.toml
native/miloco-agent-runtime/src/: lib.rs
scripts/: benchmark_agent_runtime_replay.py  docker_helper.sh  install.sh  install_miloco_agent_runtime.py
tests/: test_dispatcher_event_loop_bridge.py  test_miloco_agent_runtime.py  test_runtime_contract.py  test_tool_contract.py
web_ui/: config.js
(+24 files in other folders)
