[project]
name = "xiaomi-miloco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "cachetools>=7.0.5",
    "croniter>=6.2.2",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "imagehash>=4.3.2",
    "jinja2>=3.1.6",
    "miot-kit",
    "openai>=2.28.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.42.0",
]

[tool.uv.sources]
miot-kit = { path = "miot_kit" }
