[package]
name = "miloco-agent-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "miloco_agent_runtime"
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3.31"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
