[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "miloco-agent-runtime"
version = "0.1.0"
description = "Rust-backed agent runtime for Xiaomi Miloco"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
module-name = "miloco_agent_runtime"
manifest-path = "Cargo.toml"
